# Antrag-3000

./: .gitignore  BEDIENUNG.md  CLAUDE.md  CODE_SIGNING.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: macos-pilot.yml
Fragebogen zum Starten des Coding prozesses/: Fragebogen 1.odt  Fragebogen 2.odt  Fragebogen 3.odt  Fragebogen 4.odt
admin-app/: .gitignore  README.md  package-lock.json  package.json
admin-app/docs/: admin-handbuch.html
admin-app/release/: latest-json-bauen.mjs  veroeffentlichen.ps1
admin-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-app/src-tauri/capabilities/: default.json
admin-app/src-tauri/icons/: icon.icns
admin-app/src-tauri/src/: main.rs
admin-app/ui/: index.html
branding/icons/: README.md
design/: tokens.css
docs/: Abrechnung-Fragebogen.md  Abrechnung-Spezifikation.md  README.md  handbuch-bauen.mjs  handbuch.html  release-bauen.md
foerderer-app/: .gitignore  package.json
foerderer-app/release/: latest-json-bauen.mjs  veroeffentlichen.ps1
foerderer-app/src-tauri/: Cargo.toml  tauri.conf.json
foerderer-app/src-tauri/capabilities/: default.json
foerderer-app/src-tauri/icons/: icon.icns
foerderer-app/src-tauri/src/: main.rs  verbinden.rs
foerderer-app/ui/: index.html
import/: IMPORT-REPORT.md  Katalog-Schema-fuer-Scraper.md  RECHERCHEPLAN.md  Scraper-Prompt.md  anreicherung.json  anreicherung.mjs  bfdk-laender-darstellende-kuenste.json  foerderungen-import.json  fonds-daku.json  rohquelle-bauen.mjs  zusatz-anwenden.mjs  zusatz-foerderer.json
release/: latest-json-bauen.mjs  veroeffentlichen.ps1
server/: .env.example  .gitignore  Caddyfile  Caddyfile.netcup  Caddyfile.tailscale  Cloudflare-Einrichtung.md  Logo-Ausrollen.md  NAS-Einrichtung.html  README.md  Tailscale-Einrichtung.md  docker-compose.cloudflare.yml  docker-compose.netcup.yml  docker-compose.tailscale.yml  docker-compose.yml  sammler-cron.sh  zertifikate-erzeugen.ps1
server/api/: .dockerignore  Cargo.toml  Dockerfile
server/api/src/: main.rs  service_ca.rs
server/ca/: .gitkeep
server/katalog/: .gitkeep  rohquelle-beispiel.json
server/updates/: README.md  latest.json.beispiel
src/: theme.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fonts/: LIESMICH-Schriften.md
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  beleg.rs  dokument.rs  excel.rs  katalog.rs  lib.rs  logo.rs  main.rs  ordner.rs  pdf.rs  sync.rs  tresor.rs
src/lib/: abrechnung.js  antrag.js  antragsPdf.js  begriffe.js  katalog.svelte.js  katalogHelfer.js  kfp.js  matching.js  sicherheit.js  status.js  sync.js  tresorFormat.js
src/lib/daten/: foerderungen.json  orte.js
src/lib/komponenten/: Abrechnung.svelte  AntragBlock.svelte  EigeneFoerderung.svelte  FoerderDetail.svelte  FoerderKarte.svelte  Foerderungen.svelte  Fragebogen.svelte  Geldquellen.svelte  Kalender.svelte  KatalogUpdate.svelte  KostenPlan.svelte  Kostenstellen.svelte  Matching.svelte  Merkliste.svelte  Sachbericht.svelte  SammelFormular.svelte  Sicherung.svelte  Stammdaten.svelte  SuchAuswahl.svelte  TeamSync.svelte  UpdatePruefung.svelte  Verteilung.svelte  Zuteilung.svelte
src/routes/: +layout.svelte  +page.svelte
tools/: echo-server.mjs  sicherheit-test.mjs  sync-waechter.mjs  tokens-sync.mjs
website/: code-signing.html  datenschutz.html  impressum.html  index.html
