[package]
name = "antrag-3000"
version = "0.1.0"
description = "Recherche, Verwaltung und Vorbereitung von Fördermittel-Anträgen für Kunst- und Kulturprojekte"
authors = ["Antrag 3000 Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antrag_3000_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-dialog: Datei-Auswahl-Dialoge (Speichern/Oeffnen) fuer
# das Sichern und Wiederherstellen des Tresors.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Krypto-Bausteine fuer den Datentresor (RustCrypto-Projekt, etabliert):
# argon2: macht aus dem Nutzerpasswort den Verschluesselungs-Schluessel
#         (absichtlich langsam, erschwert Passwort-Raten massiv)
# aes-gcm: AES-256-GCM-Verschluesselung mit Echtheits-Siegel
#          (falsches Passwort/Manipulation wird sicher erkannt)
argon2 = "0.5"
aes-gcm = "0.10"
# docx-rs: erzeugt Word-Dateien (.docx). In CLAUDE.md als Loesung
# fuer die Word-Ausgabe vorgesehen.
docx-rs = "0.4"
# rust_xlsxwriter: erzeugt Excel-Dateien (.xlsx), reine Rust-
# Bibliothek ohne fremde Programme. Fuer den stets aktuellen
# Kostenfinanzplan im Projektordner.
rust_xlsxwriter = "0.79"

