[package]
name = "antrag-3000"
version = "0.1.0"
description = "Recherche, Verwaltung und Vorbereitung von Fördermittel-Anträgen für Kunst- und Kulturprojekte"
authors = ["Antrag 3000 Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antrag_3000_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-dialog: Datei-Auswahl-Dialoge (Speichern/Oeffnen) fuer
# das Sichern und Wiederherstellen des Tresors.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Krypto-Bausteine fuer den Datentresor (RustCrypto-Projekt, etabliert):
# argon2: macht aus dem Nutzerpasswort den Verschluesselungs-Schluessel
#         (absichtlich langsam, erschwert Passwort-Raten massiv)
# aes-gcm: AES-256-GCM-Verschluesselung mit Echtheits-Siegel
#          (falsches Passwort/Manipulation wird sicher erkannt)
argon2 = "0.5"
aes-gcm = "0.10"
# docx-rs: erzeugt Word-Dateien (.docx). In CLAUDE.md als Loesung
# fuer die Word-Ausgabe vorgesehen.
docx-rs = "0.4"
# rust_xlsxwriter: erzeugt Excel-Dateien (.xlsx), reine Rust-
# Bibliothek ohne fremde Programme. Fuer den stets aktuellen
# Kostenfinanzplan im Projektordner.
rust_xlsxwriter = "0.79"
# genpdf: erzeugt das Antrags-PDF (Stammblatt, Formular, KFP, Anhang)
# mit automatischem Zeilen- und Seitenumbruch sowie Tabellen. Diese
# Layout-Logik selbst zu schreiben waere sehr umfangreich und
# fehleranfaellig. Bindet eine eingebettete Schrift (Open Sans) ein, damit
# Umlaute korrekt erscheinen. Feature "images" fuer Bild-Anhaenge.
genpdf = { version = "0.2", features = ["images"] }
# lopdf: haengt die hochgeladenen PDF-/Bild-Anhaenge an das Antrags-PDF
# an (Seiten zu EINER Datei zusammenfuegen). Genau dafuer gedacht.
lopdf = "0.32"
# image: nur, um in der von genpdf genutzten image-0.23 die Decoder fuer
# PNG und JPEG zu aktivieren (genpdf selbst schaltet sie nicht ein).
# Cargo vereint die Features auf derselben Crate-Version.
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
# Phase 2 (Team-Sync): mTLS-HTTP-Client (laut CLAUDE.md vorgesehene
# Rust-Aufgabe). reqwest mit rustls; x509-parser/rustls-pemfile, um das
# Zugangs-Paket zu pruefen und den Geraetenamen (CN) aus dem Zertifikat
# zu lesen.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
x509-parser = "0.16"
rustls-pemfile = "2"
# base64: dekodiert das in den Stammdaten gespeicherte Logo (als Data-URL)
# fuer den Briefkopf in PDF und Word.
base64 = "0.22"
# rcgen: erzeugt die Team-CA und Geraete-Ausweise direkt in der App
# (reines Rust, kein OpenSSL/Kommandozeile noetig). Feature x509-parser
# fuer from_ca_cert_pem (CA aus dem Tresor zum Signieren laden).
rcgen = { version = "0.13", features = ["x509-parser"] }
# Phase 3 / Etappe 5: signiertes App-Selbstupdate.
# tauri-plugin-updater prueft neue Versionen und installiert NUR Pakete,
# deren Signatur zum eingebauten oeffentlichen Schluessel passt (etablierte
# minisign-Signatur, keine selbstgebaute Krypto). tauri-plugin-process
# erlaubt den Neustart der App nach dem Update.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows-Anmeldedatenschutz (DPAPI) fuer "Auf diesem Geraet merken":
# bindet den Tresor-Schluessel an das Windows-Konto, ohne ihn im Klartext
# abzulegen. windows-sys = schlanke offizielle FFI-Bindungen (nur Windows).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }

