[package]
name = "antrag3000-admin"
version = "0.2.0"
description = "Antrag 3000 – Admin-Werkzeug (Förder-Datenbank pflegen)"
authors = ["Antrag 3000 Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Datei-Auswahl (Zugangs-Paket, Katalog-Datei).
tauri-plugin-dialog = "2"
# Öffnet die Förder-Webseite im Standard-Browser (zum schnellen Prüfen einer
# Meldung/eines Vorschlags). Offizielles Tauri-Plugin wie in der Nutzer-App,
# keine eigene Krypto/Prozess-Logik.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# mTLS-HTTP-Client (wie in der Nutzer-App): reqwest mit rustls.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Zugangs-Paket prüfen + Gerätenamen (CN) aus dem Zertifikat lesen.
rustls-pemfile = "2"
# x509-parser "verify": prueft die Zertifikats-Kette (Foerderer-Cert von der
# Foerderer-CA signiert) beim Import eines signierten Foerderer-Exports.
x509-parser = { version = "0.16", features = ["verify"] }
# rcgen: erzeugt die Foerderer-CA und die Foerderer-Zertifikate (Aktivierung).
# Reines Rust, gleiche Abhaengigkeit/Version wie in der Nutzer-App. Feature
# x509-parser fuer from_ca_cert_pem (CA aus Datei zum Signieren laden).
rcgen = { version = "0.13", features = ["x509-parser"] }
# p256/base64: prueft die ECDSA-Signatur eines Foerderer-Exports (Herkunft).
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
