[package]
name = "antrag3000-foerderer"
version = "0.1.0"
description = "Antrag 3000 – Förderer-App"
authors = ["Antrag 3000 Team"]
license = "GPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Bewusst schlank gehalten.
tauri = { version = "2", features = [] }
# Datei-Dialog ("Speichern unter") fuer den Foerderer-Export (Weg A: Datei).
# Gleiche Abhaengigkeit wie in der Admin-App.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Signatur-Herkunft (altes Datei-Export-Modell): signiert jeden Export mit dem
# Foerderer-Schluessel (ECDSA P-256, RustCrypto).
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
base64 = "0.22"
# Gehostetes Modell (Roadmap 7): online verbinden + live syncen.
# reqwest mit rustls = mTLS-HTTP-Client (wie Nutzer-App); rcgen erzeugt das
# Foerderer-Schluesselpaar LOKAL (kopiersicher, nur der oeffentliche Teil geht
# an den Server).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rcgen = { version = "0.13" }

[profile.release]
opt-level = "z"
lto = true
strip = true
