[package]
name = "antrag3000-foerderer"
version = "0.2.0"
description = "Antrag 3000 – Förderer-App"
authors = ["Antrag 3000 Team"]
license = "GPL-3.0-or-later"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Bewusst schlank gehalten.
tauri = { version = "2", features = [] }
# Datei-Dialog: Einladungs-Datei auswaehlen (verbinden.rs).
tauri-plugin-dialog = "2"
# Signiertes Selbstupdate (wie Nutzer- und Admin-App): prueft den Updater-
# Endpoint und installiert nur Pakete mit gueltiger minisign-Signatur. Jetzt
# sinnvoll, weil die Foerderer-App online mit dem Dienst verbunden ist.
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Gehostetes Modell (Roadmap 7): online verbinden + live syncen.
# reqwest mit rustls = mTLS-HTTP-Client (wie Nutzer-App); rcgen erzeugt das
# Foerderer-Schluesselpaar LOKAL (kopiersicher, nur der oeffentliche Teil geht
# an den Server).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rcgen = { version = "0.13" }

[profile.release]
opt-level = "z"
lto = true
strip = true
