[package]
name = "antrag3000-server"
version = "0.1.0"
edition = "2021"
description = "Sync-Dienst (Topf 2) fuer Antrag 3000 – nur unkritische Team-Daten"

[dependencies]
# axum: kleines, modernes Web-Framework fuer die paar REST-Endpunkte.
axum = "0.7"
# tokio: asynchrone Laufzeit, die axum braucht.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sqlx: Datenbankzugriff. Bewusst OHNE Compile-Zeit-Makros (Laufzeit-
# Abfragen), damit derselbe Code spaeter auch auf PostgreSQL laeuft –
# dann nur das Feature "postgres" ergaenzen.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
# Fuer den Geraete-Fingerabdruck aus dem Client-Zertifikat (Caddy reicht
# das Zertifikat als Base64 durch; wir bilden den SHA-256 selbst).
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
# totp-rs: Admin-Zwei-Faktor per Authenticator-App (TOTP, RFC 6238).
# Etablierte Bibliothek, keine Eigenbau-Krypto. "gen_secret" erzeugt das
# Geheimnis, "otpauth" liefert die otpauth://-URL zum Einscannen.
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
# qrcode: zeigt die otpauth-URL als QR-Code direkt im Terminal an
# (offline), damit man sie mit der Authenticator-App scannen kann.
qrcode = "0.14"
# rcgen: erzeugt und haelt die Service-CA (gehostetes Modell) und signiert
# daraus Geraete-Ausweise. Reines Rust, gleiche Bibliothek/Version wie die
# Admin-App (keine Eigenbau-Krypto). Feature x509-parser liefert
# SubjectPublicKeyInfo::from_pem (nur der oeffentliche Geraete-Schluessel wird
# eingelesen -> kopiersicher) und from_ca_cert_pem (CA aus PEM rekonstruieren).
rcgen = { version = "0.13", features = ["x509-parser"] }
# time: relative Gueltigkeit fuer kurzlebige Ausweise (jetzt + N Tage, Roadmap 10).
# Kommt ohnehin ueber rcgen mit; hier nur direkt nutzbar gemacht (keine neue
# Transitiv-Last).
time = "0.3"
# x509-parser: prueft kryptografisch, dass ein vorgelegter Ausweis von der
# Service-CA signiert ist (Grace-Wiederanmeldung + CA-Test) und liest dessen
# Ablauf/oeffentlichen Schluessel.
x509-parser = { version = "0.16", features = ["verify"] }
# p256: Besitznachweis bei der Grace-Wiederanmeldung – die App signiert den neuen
# Schluessel mit dem ALTEN (ECDSA P-256), der Server prueft das gegen den
# oeffentlichen Schluessel des alten Ausweises. RustCrypto, keine Eigenbau-Krypto.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
